@@ -1,10 +1,7 @@
 package ru.job4j.list.matrixtolist;
 
 import org.junit.Test;
-
-import java.util.Arrays;
 import java.util.List;
-
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
 
@@ -18,7 +15,7 @@ public class TranspositionTest {
                 List.of(3, 4)
         );
         List<Integer> result = tr.funck(matrix);
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4
         );
         assertThat(result, is(expect));
